--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,8 @@
 
 @charset "UTF-8";
 
+
+
 #map {
     width: 100%;
     height: 100%;
@@ -44,13 +46,49 @@
     margin-left: 40px;
 }
 
-
 .chats-container{
     padding: 10px;
     margin-top: 20px;
     border: 1px solid grey;
     border-radius: 3px;
+    .fa-search{
+        position: absolute;
+        font-size: 20px;
+        margin: 9px;
+        color: #6c757d;
+    }
+    .fa-plus-circle{
+        font-size: 25px;
+        color: #6c757d;
+        margin-left: 13px;
+        top: 3px;
+        position: relative;
+        cursor: pointer;
+    }
 }
 .search-inputfield{
     width: 85%;
+    display: inline-block;
+    padding-left: 33px;
+}
+
+.empty-chatlist{
+    margin-top: 20px;
+    p{
+        font-size: 15px;
+    }
+}
+
+.choose-location{
+    display: none;
+    width: 350px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 800;
+    top: 20px;
+    border: 1px solid black;
+    font-size: 17px;
+    text-align: center;
+    padding: 10px;
+    left: 35%;
 }
