--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -92,3 +92,28 @@
     padding: 10px;
     left: 35%;
 }
+
+.new-chat{
+    display: none;
+    width: 350px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 800;
+    top: 20px;
+    border: 1px solid black;
+    font-size: 17px;
+    text-align: center;
+    padding: 10px;
+    left: 35%;
+}
+
+.create-chat{
+    margin-top: 15px;
+}
+
+.title{
+    margin-top: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    color: #1e76c3;
+}
