--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -37,10 +37,6 @@
     height: 85px;
 }
 
-.open-chat{
-    display: none;
-}
-
 .username{
     font-size: 24px;
     margin-left: 40px;
@@ -71,16 +67,39 @@
     display: inline-block;
     padding-left: 33px;
 }
-
-.empty-chatlist{
+.chatlist{
     margin-top: 20px;
-    p{
-        font-size: 15px;
+    .empty-chatlist{
+        p{
+            font-size: 15px;
+        }
+    }
+    .chats{
+        width: 97%;
+        padding-bottom: 15px;
+        border-bottom: 1px solid black;
+        cursor: pointer;
+        margin-bottom: 10px;
+        padding-left: 7px;
+    }
+    .chat-coords{
+        display: inline-block;
+        font-size: 14px;
+        color: #6c757d;
+        margin-top: 5px;
+    }
+    .chat-title{
+        font-size: 18px;
+    }
+    .fa-chevron-right{
+        font-size: 32px;
+        float: right;
+        position: relative;
+        bottom: 10px;
     }
 }
 
 .choose-location{
-    display: none;
     width: 350px;
     background-color: #fff;
     position: absolute;
@@ -94,7 +113,6 @@
 }
 
 .new-chat{
-    display: none;
     width: 350px;
     background-color: #fff;
     position: absolute;
