--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -119,10 +119,12 @@
     }
     .chat-title{
         display: inline-block;
+        padding-top: 5px;
     }
     .messages{
         height: 460px;
         overflow-y: auto;
+        padding-top: 20px;
     }
     .msg-input{
         padding-top: 10px;
@@ -130,6 +132,28 @@
             margin-right: 12px;
             border-top-right-radius: .25rem;
             border-bottom-right-radius: .25rem;
+        }
+    }
+    .msg-bubble{
+        display: block;
+        padding-bottom: 10px;
+        .userName{
+            font-size: 15px;
+        }
+        .sentMsg{
+            border: 1px solid grey;
+            padding: 5px;
+            border-radius: 2px;
+            background-color: #e1e2e2;
+        }
+        .msg-data{
+            width: 50%;
+            &.right{
+                margin-left: 50%;
+                .sentMsg{
+                    background-color: #f0f8ff;
+                }
+            }
         }
     }
     
