functionality all done

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -59,6 +59,14 @@
         margin: 9px;
         color: #6c757d;
     }
+    .fa-times{
+        position: absolute;
+        font-size: 20px;
+        margin: 9px;
+        color: #6c757d;
+        margin-left: -27px;
+        cursor: pointer;
+    }
     .fa-plus-circle{
         font-size: 25px;
         color: #6c757d;
